added dbc2 - still in progress

--- a/unit1_projects/dbc2.html
+++ b/unit1_projects/dbc2.html
@@ -3,9 +3,10 @@
 	<body background="images/background.jpg">
 
 		<head>
-			<link rel="stylesheet" type="text/css" href="stylesheets/dbc1.css">
-			<p align="center">A little bit about myself!</p>
-		</head>		
+			<link rel="stylesheet" type="text/css" href="stylesheets/dbc2.css">
+			<p class="border" align="center">Week 1 Solo Challenge</p>	
+		</head>			
+		<div style="background-image:url(images/black.jpg); background-repeat: no-repeat; width: auto; height: 60px; vertical-align: middle; text-align: center;"><p class="white-text">My Photo Page!</p></div>
 		<font size="4"><a href="mailto:quytx1102@gmail.com">Send me an email!</a> </font>
 		<br/>
 		<body>
