--- a/unit1_projects/week1_technical_blog.html
+++ b/unit1_projects/week1_technical_blog.html
@@ -19,7 +19,8 @@
 		<li>There are many other livescore websites, however I still prefer livescore.com simply because it is simple, and has information I need. Other websites may be fancy, colorful, but why would I care about anything rather than the score itself?</li>
 		<li>Another good thing is the site has no ads whatsoever, that makes reading even easier.</li>		
 		</ul>
-		</font>	
+		</font>
+		<img src="images/livescore.jpg" align="center">	
 
 		<h2><font color="red"><u>YouTube:</u></font></h2>
 		<font color="#F5A9A9"; size="4">
