--- a/unit1_projects/week1_technical_blog.html
+++ b/unit1_projects/week1_technical_blog.html
@@ -20,7 +20,7 @@
 		<li>Another good thing is the site has no ads whatsoever, that makes reading even easier.</li>		
 		</ul>
 		</font>
-		<img src="images/livescore.jpg" align="center">	
+		<img src="images/livescore.jpg" align="middle">	
 
 		<h2><font color="red"><u>YouTube:</u></font></h2>
 		<font color="#F5A9A9"; size="4">
