--- a/unit1_projects/week1_technical_blog.html
+++ b/unit1_projects/week1_technical_blog.html
@@ -16,7 +16,7 @@
 		<ul>
 		<li>As the title says, live scores are updated directly from the source, in real-time.</li>
 		<li>My eyes are drawn directly to the scores of the most recent matches/games. The website is very simple, on a dark theme, which does not hurt my eyes at all. Yet I can always find what I am looking for easily.</li>
-		<li>There are many other livescore websites, however I still prefer livescore.com simply because it is simple, and has information I need. Other websites may be fancy, colorful, but why would I care about anything rather than the score itself?</li>
+		<li>There are many other livescore websites, however I still prefer livescore.com simply because it is simple, and has all information I need. Other websites may be fancy, colorful, but why would I care about anything rather than the score itself?</li>
 		<li>Another good thing is the site has no ads whatsoever, that makes reading even easier.</li>		
 		</ul>
 		</font>
@@ -34,17 +34,8 @@
 		<h2><font color=#FFFF00><u>NotebookReview:</u></font></h2>
 		<font color="#F2F5A9"; size="4">
 		<ul>
-		<li></li>
-		<li></li>
-		<li></li>
-		<li></li>
-		<li></li>
-		<li></li>
-		<li></li>
-		<li></li>
-		<li></li>
-		</ul>
-	
-		
+		<li>This is the lasrgest forum about notebooks. Any kind of laptop: new/old, cheap/expensive, will all be here and most of them have a review article. Most of laptop manufacturers have technical supports who are active member of this forum. You can find tons of information, ask any question if you have trouble with the hardware. You can even find many good deals in the "Buy and Sell" sub-forum as an alternative to eBay.</li>
+		<li>This is just a typical forum website so the design is very familiar, just like any other forum. </li>
+		</ul>		
 	</body>
 	</html>
