--- a/index.html
+++ b/index.html
@@ -1,1 +1,7 @@
 <html><body>This is Quy. Hello DBC!</body></html>
+<br/>
+<a href="http://quytx1102.github.io/unit1_projects/dbc1.html">A bit about myself</a>
+<br/>
+<a href="http://quytx1102.github.io/unit1_projects/week1_technical_blog.html">Week 1 - Technical Blog</a>
+<br/>
+<a href="http://quytx1102.github.io/unit1_projects/week1_cultural_blog.html">Week 1 - Cultural Blog</a>
