--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
-<body background="photobg.jpg">This is Quy. Hello DBC!</body></html>
+<body background="bg.jpg">This is Quy. Hello DBC!</body></html>
 <br/>
 <a href="http://quytx1102.github.io/unit1_projects/dbc1.html">A bit about myself</a>
 <br/>
