--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
 <html>
-<body background="bg.jpg">This is Quy. Hello DBC!</body></html>
+<body background="bg.jpg"><center><font size="5">Hello DBC! This is Quy.
 <br/>
 <a href="http://quytx1102.github.io/unit1_projects/dbc1.html">A bit about myself</a>
+<br/>
+<a href="http://quytx1102.github.io/unit1_projects/wireframe_sites.html">Week 1 - Wireframe Sites</a>
 <br/>
 <a href="http://quytx1102.github.io/unit1_projects/week1_technical_blog.html">Week 1 - Technical Blog</a>
 <br/>
 <a href="http://quytx1102.github.io/unit1_projects/week1_cultural_blog.html">Week 1 - Cultural Blog</a>
+</font></center></body></html>
