--- a/index.html
+++ b/index.html
@@ -1,11 +1,38 @@
-<html>
-<body background="bg.jpg"><center><font size="5">Hello DBC! This is Quy.
-<br/>
-<a href="http://quytx1102.github.io/unit1_projects/dbc1.html">A bit about myself</a>
-<br/>
-<a href="http://quytx1102.github.io/unit1_projects/wireframe_sites.html">Week 1 - Wireframe Sites</a>
-<br/>
-<a href="http://quytx1102.github.io/unit1_projects/week1_technical_blog.html">Week 1 - Technical Blog</a>
-<br/>
-<a href="http://quytx1102.github.io/unit1_projects/week1_cultural_blog.html">Week 1 - Cultural Blog</a>
-</font></center></body></html>
+<!DOCTYPE html>
+<html lang="en">
+<title>My first Web page at Dev Bootcamp!</title>
+<body>	
+	<link rel="stylesheet" type="text/css" href="index.css">
+	<div id="header">Hello DBC!</div>
+	<div id="links">
+		<div id="link_header">DBC Links<br/></div>
+		<div id="link"><a href="http://quytx1102.github.io/unit1_projects/dbc1.html">A bit about myself</a><br/></div>
+		<div id="link"><a href="http://quytx1102.github.io/unit1_projects/wireframe_sites.html">Week 1 - Wireframe Sites</a><br/></div>
+		<div id="link"><a href="http://quytx1102.github.io/unit1_projects/week1_technical_blog.html">Week 1 - Technical Blog</a><br/></div>
+		<div id="link"><a href="http://quytx1102.github.io/unit1_projects/week1_cultural_blog.html">Week 1 - Cultural Blog</a><br/></div>		
+	</div>
+
+	<div id="photos">
+		I love traveling!<br/>
+		<img src="images/photos/hawaii.gif"><br/>
+		<img src="images/photos/fall.gif"><br/>
+		<img src="images/photos/bird.gif"><br/>
+		<img src="images/photos/sunset.gif"><br/>
+		<img src="images/photos/canyon.gif">
+
+
+	</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+</body>
