--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	</div>
 
 	<div id="photos">
-		I love traveling!<br/>
+		<div id="photo_header">I love traveling!!!<br/></div>
 		<img src="images/photos/hawaii.gif"><br/>
 		<img src="images/photos/fall.gif"><br/>
 		<img src="images/photos/bird.gif"><br/>
