--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 		<div id="link"><a href="http://quytx1102.github.io/unit1_projects/dbc1.html">A bit about myself</a><br/></div>
 		<div id="link"><a href="http://quytx1102.github.io/unit1_projects/wireframe_sites.html">Week 1 - Wireframe Sites</a><br/></div>
 		<div id="link"><a href="http://quytx1102.github.io/unit1_projects/week1_technical_blog.html">Week 1 - Technical Blog</a><br/></div>
-		<div id="link"><a href="http://quytx1102.github.io/unit1_projects/week1_cultural_blog.html">Week 1 - Cultural Blog</a><br/></div>		
+		<div id="link"><a href="http://quytx1102.github.io/unit1_projects/week1_cultural_blog.html">Week 1 - Cultural Blog</a><br/></div>
+		<div id="link"><a href="http://quytx1102.github.io/unit2_projects/week4_technical_blog.html">Week 4 - Technical Blog</a><br/></div>
+				
 	</div>
 
 	<div id="photos">
