--- a/blog_cultural/week3_cultural.html
+++ b/blog_cultural/week3_cultural.html
@@ -14,7 +14,7 @@
 	    <li class="name">
 	      <h1><a href="../index.html">Quy Tran</a></h1>
 	    </li>
-	  
+	  <li class="toggle-topbar menu-icon"><a href="#"><span>Menu</span></a></li>
 	  </ul>
 
 	  <section class="top-bar-section">
