update contact info

--- a/contact.html
+++ b/contact.html
@@ -74,7 +74,10 @@
     
 	
 	<!-- Main body -->
-
+  <div class="small-8 small-centered large-centered columns">
+	  <a href="mailto:quytx1102@gmail.com" class="button expand">Send me an email!</a>
+     
+      </div>
 		
    <a href="mailto:quytx1102@gmail.com" class="button expand">Send me an email!</a>
    <!-- Color Classes -->
